# Stockwiz-AI-Stock-Dashboard

./: .gitignore  CLAUDE.md  LANDING_REDESIGN_PLAN.md  README.md  buy_analysis.py  main.py  pyproject.toml  requirements.txt  resume_entry.txt  setup.sh  supabase_ai_calls.sql  supabase_alerts.sql  supabase_credits.sql  supabase_plaid.sql  supabase_setup.sql  supabase_sold_positions.sql
.claude/: launch.json
api/: server.py
core/: alerts.py  analysis.py  auth.py  cache.py  chat.py  credits.py  criteria.py  crypto.py  db.py  distill_log.py  email_validation.py  filings.py  general_chat.py  metrics.py  news.py  notify.py  plaid_client.py  portfolio.py  prediction.py  rag_index.py  screener.py  track_record.py  universe_agent.py  universe_cache.py  universe_fetcher.py  universe_symbols.py
data/: criteria.json  universe.json
docs/: AI_ARCHITECTURE.md
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/components/: AlertsEditor.tsx  AnalysisCard.tsx  AreaChart.tsx  AuthPage.tsx  BollingerChart.tsx  CandlestickChart.tsx  ChartWidget.tsx  CriteriaBuilder.tsx  CustomCursor.tsx  DepthChart.tsx  FinancialsTab.tsx  GeneralChat.tsx  LandingPage.tsx  LegalPages.tsx  MACDChart.tsx  MarketBar.tsx  MovingAverageChart.tsx  NewsPanel.tsx  PlaidConnect.tsx  PortfolioChart.tsx  PortfolioPanel.tsx  PortfolioTab.tsx  PredictionChart.tsx  ProfilePanel.tsx  ROIChart.tsx  RSIChart.tsx  RelativeStrengthChart.tsx  SearchBar.tsx  SettingsPage.tsx  StockChat.tsx  StockDetailPanel.tsx  StockTable.tsx  (+8 more)
(+20 files in other folders)
